--- a/gui/package.json
+++ b/gui/package.json
@@ -19,10 +19,12 @@
     "react-dom": "^18.1.0",
     "react-html-parser": "^2.0.2",
     "react-notifications": "^1.7.3",
+    "react-player": "^2.10.1",
     "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
+    "react-video-js-player": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
