--- a/GraduationProject/src/WebAPI/web.config
+++ b/GraduationProject/src/WebAPI/web.config
@@ -22,4 +22,10 @@
 		  <remove name="WebDAVModule" />
 	  </modules>
   </system.webServer>
+	<appSettings>
+		<add key="Url" value="http://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+		<add key="ReturnUrl" value="https://localhost:57678/PayConfirm"/>
+		<add key="TmnCode" value="GHHNT2HB"/>
+		<add key="HashSecret" value="BAGAOHAPRHKQZASKQZASVPRSAKPXNYXS"/>
+	</appSettings>
 </configuration>
