--- a/gui/package.json
+++ b/gui/package.json
@@ -14,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "chart.js": "^3.8.0",
     "html-react-parser": "^1.4.14",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-html-parser": "^2.0.2",
     "react-notifications": "^1.7.3",
